[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aardt"
version = "0.1.0"
authors = [
  { name="Timothy C. Sweeney-Fanelli", email="tim@affects.ai" },
]
description = "An extensible utility package for working with AER Datasets such as ASCERTAIN, CUADS, DREAMER and more"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]
dependencies = [
    "ijson",
    "neurokit2",
    "numpy",
    "scikit_learn",
    "scipy",
    "tensorboard>=2.18.0",
    "tensorflow>=2.18.0"
]

[project.urls]
Homepage = "https://github.com/affectsai/aardt"
Issues = "https://github.com/affectsai/aardt/issues"